# list-of-me

./: .gitignore  .prettierrc  CHANGELOG.md  PKGBUILD  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri-signing.key.pub  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  error.rs  lib.rs  main.rs  models.rs
src/components/layout/: Header.vue  MainLayout.vue  NavItem.vue  Sidebar.vue
src/components/projects/: ProjectCard.vue  ProjectForm.vue
src/components/tasks/: TaskBoard.vue  TaskCard.vue  TaskFilter.vue  TaskForm.vue  TaskList.vue
src/components/ui/: AppIcon.vue  Button.vue  Input.vue  Modal.vue  SelectMenu.vue  ToastList.vue
src/router/: index.ts
src/services/: projectService.ts  taskService.ts  tauriService.ts
src/stores/: index.ts  projectStore.ts  taskStore.ts  uiStore.ts
src/types/: api.ts  project.ts  task.ts
src/utils/: constants.ts  dateUtils.ts  debounce.ts  validation.ts
src/views/: CompletedView.vue  InboxView.vue  ProjectDetailView.vue  ProjectsView.vue  SettingsView.vue  TaskCreateView.vue  TaskEditView.vue  TodayView.vue
