[package]
name = "list-of-me"
version = "0.1.0"
description = "A personal task management desktop application built with Tauri + Vue 3"
authors = ["woruo03 <woruo03@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/woruo03/list-of-me"
readme = "../README.md"
homepage = "https://github.com/woruo03/list-of-me"
documentation = "https://github.com/woruo03/list-of-me#readme"
keywords = ["task-management", "gtd", "tauri", "vue", "desktop-app"]
categories = ["task-management", "gui", "desktop-application"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "list_of_me_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.38.0", features = ["chrono", "bundled"] }
anyhow = "1.0.101"
tokio = { version = "1.49.0", features = ["full"] }
thiserror = "2.0.18"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.dev]
incremental = true # 增量编译，改一点编一点，速度快

[profile.release]
codegen-units = 1   # 减少分块，让编译器能全局优化代码
opt-level = "s"     # 优先考虑二进制体积（Small），适合桌面软件
panic = "abort"     # 出错时直接中止，不包含回溯信息，能显著减小程序体积
strip = "debuginfo" # 自动剥离符号表，进一步缩小体积

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
